--- a/assets/configs/playerSpawnConfig.json
+++ b/assets/configs/playerSpawnConfig.json
@@ -1,7 +1,7 @@
 {
   "Draconic Medium": {
     "hull": "draconic:draconicMedium",
-    "items": "6*rep core:mediumArmor-1 core:bigShield-1 tribe:laser-1",
+    "items": "6*rep core:mediumArmor-1 core:bigShield-1 core:blaster-1",
     "money": 300
   }
 }
